Add button logic

--- a/Media/nasa-tv.html
+++ b/Media/nasa-tv.html
@@ -110,10 +110,10 @@
 
                     <!-- Channel Seleciton-->
                     <div class="col-lg-6 text-center">
-                        <button class="btn btn-outline-primary w-50" id="btnPublic">Public</button>
+                        <button class="btn btn-primary w-100" id="btnPublic">Public</button>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <button class="btn btn-outline-primary w-50" id="btnMedia">Media</button>
+                        <button class="btn btn-outline-primary w-100" id="btnMedia">Media</button>
                     </div>
 
                     <!-- Description -->
@@ -133,12 +133,12 @@
                     <div class="card">
                       <div class="card-header p-0" id="headingOne">
                         <h2 class="mb-0">
-                          <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" data-target="One">
                             Sunday
                           </button>
                         </h2>
                       </div>
-                      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
                         <div class="card-body">
                           <table class="table table-dark">
                                 <tr>
@@ -182,12 +182,12 @@
                     <div class="card">
                       <div class="card-header p-0" id="headingTwo">
                         <h2 class="mb-0">
-                            <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                            <button class="schedule btn btn-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" data-target="Two">
                             Monday
                           </button>
                         </h2>
                       </div>
-                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                      <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#headingTwo">
                         <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -231,12 +231,12 @@
                     <div class="card">
                       <div class="card-header p-0" id="headingThree">
                         <h2 class="mb-0">
-                            <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                            <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" data-target="Three">
                             Tuesday
                           </button>
                         </h2>
                       </div>
-                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#headingThree">
                         <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -278,14 +278,14 @@
 
                     <!-- Wednesday -->
                     <div class="card">
-                        <div class="card-header p-0" id="headingThree">
+                        <div class="card-header p-0" id="headingFour">
                           <h2 class="mb-0">
-                              <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                              <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" data-target="Four">
                               Wednesday
                             </button>
                           </h2>
                         </div>
-                        <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordionExample">
+                        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#headingFour">
                           <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -332,14 +332,14 @@
 
                       <!-- Thursday -->
                       <div class="card">
-                        <div class="card-header p-0" id="headingThree">
+                        <div class="card-header p-0" id="headingFive">
                           <h2 class="mb-0">
-                              <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                              <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive" data-target="Five">
                               Thursday
                             </button>
                           </h2>
                         </div>
-                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#headingFive">
                           <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -381,14 +381,14 @@
 
                       <!-- Friday -->
                       <div class="card">
-                        <div class="card-header p-0" id="headingThree">
+                        <div class="card-header p-0" id="headingSix">
                           <h2 class="mb-0">
-                              <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                              <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix" data-target="Six">
                               Friday
                             </button>
                           </h2>
                         </div>
-                        <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+                        <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#headingSix">
                           <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -430,14 +430,14 @@
 
                       <!-- Saturday -->
                       <div class="card">
-                        <div class="card-header p-0" id="headingThree">
+                        <div class="card-header p-0" id="headingSeven">
                           <h2 class="mb-0">
-                              <button class="btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
+                              <button class="schedule btn btn-outline-light text-left collapsed w-100" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven" data-target="Seven">
                               Saturday
                             </button>
                           </h2>
                         </div>
-                        <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+                        <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#headingSeven">
                           <div class="card-body">
                             <table class="table table-dark">
                                 <tr>
@@ -528,13 +528,38 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
+        // Show Public Feed
         $('#btnPublic').on('click', function(){
             $('#feedPublic').removeClass('d-none');
             $('#feedMedia').addClass('d-none');
+            $('#btnPublic').removeClass('btn-outline-primary').addClass('btn-primary');
+            $('#btnMedia').removeClass('btn-primary').addClass('btn-outline-primary');
         });
+
+        // Show Media Feed
         $('#btnMedia').on('click', function(){
             $('#feedPublic').addClass('d-none');
             $('#feedMedia').removeClass('d-none');
+            $('#btnPublic').removeClass('btn-primary').addClass('btn-outline-primary');
+            $('#btnMedia').removeClass('btn-outline-primary').addClass('btn-primary');
+        });
+
+        // Schedule Toggles
+        $('button.schedule').on('click', function(e){
+
+            // Check if section is already open
+            if ($(this).hasClass('btn-light')) {
+                // Toggle current collapse
+                $('#collapse' + $(this).attr('data-target')).toggleClass('show');
+                $('button.schedule').removeClass('btn-light').addClass('btn-outline-light');
+            } else {
+
+                // Close current collapse, open new collapse
+                $('button.schedule').removeClass('btn-light').addClass('btn-outline-light');
+                $(this).removeClass('btn-outline-light').addClass('btn-light');
+                $('.collapse').removeClass('show');
+                $('#collapse' + $(this).attr('data-target')).addClass('show');
+            }
         });
     </script>
 </html>
