Improve site responsiveness

--- a/Missions/artemis.html
+++ b/Missions/artemis.html
@@ -31,7 +31,7 @@
 <body>
     <!-- Top Nav -->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <nav class="navbar navbar-expand-xl fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo-silver.png" height="52" alt="" tabindex="1">
             </a>
@@ -79,7 +79,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
                     <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
-                    <input class="my-2 p-0 nav-search" type="search" img-circle="Search" aria-label="Search" style="width: auto;" tabindex="8">
+                    <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
         </nav>
@@ -111,7 +111,7 @@
     <!-- Featured Jumbotron -->
     <div class="row">
         <div class="jumbotron w-100">
-            <div class="container">
+            <div class="jumbotron-container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">Artemis-I Updates</h1>
