--- a/Media/videos.html
+++ b/Media/videos.html
@@ -32,7 +32,7 @@
 
     <!-- Top Nav-->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <nav class="navbar navbar-expand-xl fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo-silver.png" height="52" alt="" tabindex="1">
             </a>
