--- a/Missions/commercial-crew.html
+++ b/Missions/commercial-crew.html
@@ -31,7 +31,7 @@
 <body>
     <!-- Top Nav -->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <nav class="navbar navbar-expand-xl fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo-silver.png" height="52" alt="" tabindex="1">
             </a>
@@ -111,7 +111,7 @@
     <!-- Featured Jumbotron -->
     <div class="row">
         <div class="jumbotron w-100">
-            <div class="container">
+            <div class="jumbotron-container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">Commercial Crew Updates</h1>
