Add image text caption

--- a/article.html
+++ b/article.html
@@ -101,8 +101,8 @@
     <div class="row px-5 py-2">
         <div class="col">
             <img src="img/article-1.jpg" alt="" class="img-fluid">
-            <p>Groundwater irrigation enables farmers to grow lush crops in California’s Central Valley, but the underground water resource is dwindling. A NASA study offers a new tool for managing groundwater.</p>
-            <p><strong>Credits: California Department of Water Resources/Dale Kolke</strong></p>
+            <p class="caption mb-1">Groundwater irrigation enables farmers to grow lush crops in California’s Central Valley, but the underground water resource is dwindling. A NASA study offers a new tool for managing groundwater.</p>
+            <p class="caption"><strong>Credits: California Department of Water Resources/Dale Kolke</strong></p>
         </div>
     </div>
 
@@ -119,8 +119,8 @@
                 <!-- Embeded Image -->
                 <div class="py-3">
                     <img src="img/article-2.jpg" alt="" class="img-fluid">
-                    <p>This map shows changes in the mass of water, both above ground and underground, in California from 2003 to 2013, as measured by NASA’s GRACE satellite. The darkest red indicates the greatest water loss. The Central Valley is outlined in yellow; the Tulare Basin covers about the southern third. Extreme groundwater depletion has continued to the present.</p>
-                    <p><strong>Credits: NASA/GSFC/SVS</strong></p>
+                    <p class="caption mb-1">This map shows changes in the mass of water, both above ground and underground, in California from 2003 to 2013, as measured by NASA’s GRACE satellite. The darkest red indicates the greatest water loss. The Central Valley is outlined in yellow; the Tulare Basin covers about the southern third. Extreme groundwater depletion has continued to the present.</p>
+                    <p class="caption"><strong>Credits: NASA/GSFC/SVS</strong></p>
                 </div>
 
                 <p>A research team from NASA’s Jet Propulsion Laboratory in Southern California and the U.S. Department of Energy’s Lawrence Berkeley Laboratory in Northern California set out to create a method that would do exactly that. They attacked the problem by combining data on water loss from U.S.-European <a href="https://www.jpl.nasa.gov/missions/gravity-recovery-and-climate-experiment-grace">Gravity Recovery and Climate Experiment</a> (GRACE) and <a href="https://www.jpl.nasa.gov/missions/gravity-recovery-and-climate-experiment-follow-on-grace-fo">GRACE Follow-On</a> satellites with data on ground-level changes from a ESA (European Space Agency) Sentinel-1 satellite. Ground-level changes in this region are often related to water loss because when ground is drained of water, it eventually slumps together and sinks into the spaces where water used to be – a process called subsidence.</p>
