Match jumbotron with other pages

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -112,50 +112,56 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Featured Jumbotron -->
-        <div class="row px-4 py-5">
-            <div class="jumbotron row w-100 ml-auto mr-auto">
-                <div class="col-lg-4 ">
-                    <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
-                        <div class="uni-header">
-                            <h3 class="card-title">NASA News</h3>
-                        </div>
-                        <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
-                    </a>
-                        <div class="card-body">
-                            <p>Official NASA photographs from agency photographers chronicle what's making news across the agency, from launches and landings to important science announcements.</p>
-                            <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
-                        </div>
-                </div>
-                <div class="col-lg-4">
-                    <a href="http://images.nasa.gov/" class="card">
-                        <div class="uni-header">
-                            <h3 class="card-title">NASA Image Library</h3>
-                        </div>
-                        <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
-                    </a>
-                        <div class="card-body">                            
-                            <p>NASA's image library, <a href="images.nasa.gov">images.nasa.gov</a>, consolidates imagery and videos in one searchable locations. Users can download content in multiple sizes and resolutions and see the metadata associated with images, including EXIF/camera data on many images. </p>
-                            <button class="btn btn-primary btn-rounded" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
-                        </div>
-                </div>
-                <div class="col-lg-4">
-                    <a href="https://www.nasa.gov/missions" class="card">
-                        <div class="uni-header">
-                            <h3 class="card-title">Mission Galleries</h3>
-                        </div>
-                        <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
-                    </a>
-                    
-                        <div class="card-body">
-                            <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit <a href="https://www.nasa.gov/missions">the missions A-Z page.</a></p>
-                            <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
-                        </div>
+     <!-- Featured Jumbotron -->
+     <div class="row">
+        <div class="jumbotron w-100">
+            <div class="jumbotron-container">
+                <div class="row">
+                    <div class="col-lg-4 ">
+                        <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
+                            <div class="uni-header">
+                                <h3 class="card-title">NASA News</h3>
+                            </div>
+                            <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
+                        </a>
+                            <div class="card-body">
+                                <p>Official NASA photographs from agency photographers chronicle what's making news across the agency, from launches and landings to important science announcements.</p>
+                                <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
+                            </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="http://images.nasa.gov/" class="card">
+                            <div class="uni-header">
+                                <h3 class="card-title">NASA Image Library</h3>
+                            </div>
+                            <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
+                        </a>
+                            <div class="card-body">                            
+                                <p>NASA's image library, <a href="images.nasa.gov">images.nasa.gov</a>, consolidates imagery and videos in one searchable locations. Users can download content in multiple sizes and resolutions and see the metadata associated with images, including EXIF/camera data on many images. </p>
+                                <button class="btn btn-primary btn-rounded" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
+                            </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="https://www.nasa.gov/missions" class="card">
+                            <div class="uni-header">
+                                <h3 class="card-title">Mission Galleries</h3>
+                            </div>
+                            <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
+                        </a>
+                        
+                            <div class="card-body">
+                                <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit <a href="https://www.nasa.gov/missions">the missions A-Z page.</a></p>
+                                <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="container pb-5">
         <!-- Image Feed -->
         <div class="card-deck py-5"> 
             <div class="col-lg-4">
