--- a/about.html
+++ b/about.html
@@ -107,45 +107,51 @@
                 <p>NASA is led by Administrator Bill Nelson, who became the agency's 14th administrator on May 3, 2021. Nelson served in the U.S. Senate for 18 years from Florida and as a payload specialist on space shuttle mission 61-C in 1986.</p>
             </div>
         </div>
-        
-        <!-- Featured Jumbotron -->
-        <div class="row px-4 py-5">
-            <div class="jumbotron row w-100 ml-auto mr-auto">
-               <div class="col-lg-3">
-                   <a href="https://www.nasa.gov/feature/nasa-looks-ahead-in-2022-artemis-x-59-lunar-exploration-and-more">
-                       <div class="captioned-img">
-                            <img src="img/about-1.jpg" alt="" class="img-fluid w-100">
-                            <p class="img-caption"><span>NASA 2022</span></p>
-                       </div>
-                   </a>
-               </div>
-               <div class="col-lg-3">
-                    <a href="https://www.youtube.com/watch?v=el7RFWBlFDU">
-                        <div class="captioned-img">
-                            <img src="img/about-2.jpg" alt="" class="img-fluid w-100">
-                            <p class="img-caption"><span>Video: NASA 2022</span></p>
-                        </div>
-                    </a>
-               </div>
-               <div class="col-lg-3">
-                    <a href="https://www.nasa.gov/careers">
-                        <div class="captioned-img">
-                            <img src="img/about-3.jpg" alt="" class="img-fluid w-100">
-                            <p class="img-caption"><span>Careers @NASA</span></p>
-                        </div>
-                    </a>
-               </div>
-               <div class="col-lg-3">
-                    <a href="https://www.nasa.gov/about/org_index.html">
-                        <div class="captioned-img">
-                            <img src="img/about-4.jpg" alt="" class="img-fluid w-100">
-                            <p class="img-caption"><span>Officials and Organizations</span></p>
-                        </div>
-                    </a>
-               </div>
+    </div>
+
+    <!-- Featured Jumbotron -->
+    <div class="row">
+        <div class="jumbotron w-100">
+            <div class="jumbotron-container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <a href="https://www.nasa.gov/feature/nasa-looks-ahead-in-2022-artemis-x-59-lunar-exploration-and-more">
+                            <div class="captioned-img">
+                                 <img src="img/about-1.jpg" alt="" class="img-fluid w-100">
+                                 <p class="img-caption"><span>NASA 2022</span></p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3">
+                         <a href="https://www.youtube.com/watch?v=el7RFWBlFDU">
+                             <div class="captioned-img">
+                                 <img src="img/about-2.jpg" alt="" class="img-fluid w-100">
+                                 <p class="img-caption"><span>Video: NASA 2022</span></p>
+                             </div>
+                         </a>
+                    </div>
+                    <div class="col-lg-3">
+                         <a href="https://www.nasa.gov/careers">
+                             <div class="captioned-img">
+                                 <img src="img/about-3.jpg" alt="" class="img-fluid w-100">
+                                 <p class="img-caption"><span>Careers @NASA</span></p>
+                             </div>
+                         </a>
+                    </div>
+                    <div class="col-lg-3">
+                         <a href="https://www.nasa.gov/about/org_index.html">
+                             <div class="captioned-img">
+                                 <img src="img/about-4.jpg" alt="" class="img-fluid w-100">
+                                 <p class="img-caption"><span>Officials and Organizations</span></p>
+                             </div>
+                         </a>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
+    <div class="container pb-5">
         <!-- Listings -->
         <div class="row px-2 py-5">
             <div class="col-lg-4 my-4">
